prevent scrollbar from being shown in ajax responce

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -3,7 +3,7 @@
 /* --------------------------------------------------
    html
 -------------------------------------------------- */
-html{
+html.show-scrollbar{
   height: 100%;
   overflow-y: scroll;
 }
